--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 
+
+spring.application.name=library-application
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/restapi
 spring.datasource.username=root
 spring.datasource.password=root123
+
+spring.cloud.config.uri=http://localhost:8888
+
+
 logging.level.org.hibernate.SQL=debug
 
 
