--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,19 @@ spring.datasource.url= jdbc:mysql://localhost:3306/restapi
 spring.datasource.username=root
 spring.datasource.password=root123
 
+
 spring.cloud.config.uri=http://localhost:8888
 
 
 logging.level.org.hibernate.SQL=debug
 
 
+
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.database-platform: org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
 server.port=8090
