--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.cloud.config.uri=http://localhost:8888
 
 logging.level.org.hibernate.SQL=debug
 
-
-
+testb3
+testb1
+testb2
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.show-sql=true
